# c-syntax-validator

./: .gitignore  Justfile  README.md  build.gradle.kts  go.mod  main.cpp  main.go  meson.build  pyproject.toml  settings.gradle.kts  setup.cfg
examples/: test.c
parser/: CBaseListener.cpp  CBaseListener.h  CLexer.cpp  CLexer.h  CListener.cpp  CListener.h  CParser.cpp  CParser.h  c_base_listener.go  c_lexer.go  c_listener.go  c_parser.go  meson.build
src/c_syntax_validator/: __init__.py  __main__.py
src/main/java/net/techcable/c_syntax_validator/: Main.java
