[metadata]
name = c-syntax-validator
version = 0.2.0
description = Validates C syntax with an antlr parser
author = Techcable
author_email = <my username> at techcable.net
url = https://github.com/Techcable/c-syntax-validator
license = MIT

classifiers =
    Development Status :: 3 - Alpha

install_requires =
    # We require antlr
    antlr4-python3-runtime
    # Used for CLI
    click

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
