[metadata]
name = c-syntax-validator
version = 0.2.0
description = Validates C syntax with an antlr parser
author = Techcable
author_email = Techcable@techcable.net
long_description = README.md
long_description_content_type = text/markdown
url = https://github.com/Techcable/c-syntax-validator
license = MIT

classifiers =
    Development Status :: 3 - Alpha

install_requires =
    # We require antlr
    antlr4-python3-runtime

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
cli = click
